# simpleio

./: .gitignore  .gitmodules  .pre-commit-ci-config.yaml  .pre-commit-config.yaml  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cmake/: simpleioConfig.cmake  simpleioConfig.cmake.in
include/: CMakeLists.txt
include/simpleio/: async_queue.hpp  message.hpp  task_executor.hpp  transport.hpp  worker.hpp
include/simpleio/messages/: http.hpp  json.hpp  xml.hpp
include/simpleio/network_transport/: tcp.hpp  tls.hpp  udp.hpp
include/simpleio/transports/: tcp.hpp  tls.hpp  udp.hpp
include/simpleio/transports/ip/: http.hpp  https.hpp  ip.hpp  tcp.hpp  tls.hpp  udp.hpp
include/simpleio/transports/ip/detail/: ip_impl.hpp
include/simpleio/xml_message/: xml_message.hpp
scripts/: build  install  package
src/: CMakeLists.txt  network.cpp  xml_message.cpp
src/messages/: json.cpp  xml.cpp
src/transports/: tcp.cpp  tls.cpp  udp.cpp
src/transports/ip/: http.cpp  http_client.cpp  http_server.cpp  ip.cpp  tcp.cpp  tls.cpp  udp.cpp
tests/: CMakeLists.txt  test_messages_http.cpp  test_messages_json.cpp  test_messages_xml.cpp  test_network_transport.cpp  test_transports_ip.cpp  test_worker.cpp  test_xml_message.cpp
tests/certs/: ca.crt  receiver.crt  receiver.csr  selfsigned.crt  sender.crt  sender.csr
tests/certs/private/: ca.key  receiver.key  selfsigned.key  sender.key
